lot of work discussing OSX things with MB, and contributed fixes as well.

See `this Changelog site <https://keepachangelog.com/en/1.0.0>`_ for helpful
rules on making a good Changelog.

********
Releases
********

* Unreleased

  First release that requires Python 3.

  * ``wheel_libs`` now supports recursive dependencies.
  * ``listdeps`` command now supports recursive dependencies.
  * Wheels with top-level extension modules can now be delocated.
    [#123](https://github.com/matthew-brett/delocate/pull/123)
  * Wheels with multiple packages will no longer copy duplicate libraries.
    [#35](https://github.com/matthew-brett/delocate/issues/35)

* 0.9.1 (Friday September 17th 2021)

  Bugfix release.

  * Fixed issue where Delocate would attempt to modify the install names of a
    non-copied library which dynamically links to a copied library.
    [#120](https://github.com/matthew-brett/delocate/pull/120)

* 0.9.0 (Saturday July 17th 2021)

  Refactoring, updating and `arm64` (M1) support.

  * Libraries depending on ``@loader_path`` are now supported (KB).
  * ``@executable_path`` is supported and defaults to the current Python
    executable path.  This can be changed with the ``--executable-path`` flag
    (KB).
  * The ``--ignore-missing-dependencies`` flag can be given to ignore errors and
    delocate as many dependencies as possible (KB).
  * Dependencies are now delocated recursively (KB).
  * ``delocate.delocating.copy_recurse`` has been deprecated (KB).
  * ``delocate.libsana.resolve_rpath`` has been deprecated (KB).
  * Add required ad-hoc signing for libraries (IF).
  * Fix to escape regexp special characters to occur in library names (such as
    ``++`` in ``libc++`` (Grzegorz Bokota).
  * Support for new ``otool`` output from arm architecture fat libraries (IF).
  * Various CI improvements, including refactoring for test wheel generation,
    replacing ``i386`` with ``arm64`` for dual architectures, and start of
    Github workflow tests (MB, KB).