@@ -1,0 +1,3 @@
+This contains a single compiled module stored in a subpackage of a namespace.
+
+This reuses the `libextfunc2.dylib` library from the `fakepkg_rpath` wheel.
