@@ -28,6 +28,10 @@ cd fakepkg_toplevel
 python setup.py clean bdist_wheel --py-limited-api=cp36
 cd -
 
+cd fakepkg_namespace
+python setup.py clean bdist_wheel --py-limited-api=cp36
+cd -
+
 OUT_PATH=../delocate/tests/data
 rm $OUT_PATH/fakepkg*.whl
 cp */dist/*.whl $OUT_PATH
